Refactored Runtime.exec() use to avoid deprecation in JDK 18